--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "jest": "^29.7.0",
     "mysql2": "^3.11.4",
     "node.js": "^0.0.1-security",
+    "package.json": "file:",
     "socket.io": "^4.7.2"
   },
   "name": "package.json",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "supertest": "^7.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
