--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "dependencies": {
-    "axios": "^1.7.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "mysql2": "^3.11.4",
-    "node.js": "^0.0.1-security",
-    "package.json": "file:",
-    "socket.io": "^4.7.2"
-  },
-  "name": "package.json",
+  "name": "my-app",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "my-app": "file:",
+    "mysql2": "^3.11.4",
+    "socket.io": "^4.7.2"
+  },
   "devDependencies": {
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
