Added required test env

--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "description": "",
   "devDependencies": {
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "supertest": "^7.0.0"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "jest-environment-jsdom"
   }
 }
