--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "css_game_theory": "file:",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mysql2": "^3.11.4",
     "socket.io": "^4.7.2"
   },
