--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BASE_URL = '162.241.217.120'
 PORT = '3000'
 DB_HOST: "162.241.217.120"
-DB_USER: "kfrdqmmy_root"
+DB_USER: "txlxmqol_root"
 DB_PASSWORD: "j&hghasfdk(&5H53HG&^8&*%^$&jnb%&*(&^%$hFGHJKJHGFCV234567%&%"
-DB_NAME: "kfrdqmmy_cssgametheory"
+DB_NAME: "txlxmqol_GameTheory_2.0"
