changing back to og cred

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BASE_URL = '162.241.217.120'
 PORT = '3000'
 DB_HOST=162.241.217.120
-DB_USER=txlxmqol_webToDB
-DB_PASS="ItsBeginingToLookLikeChristmas"
+DB_USER=txlxmqol_root
+DB_PASS="j&hghasfdk(&5H53HG&^8&*%^$&jnb%&*(&^%$hFGHJKJHGFCV234567%&%"
 DB_NAME=txlxmqol_GameTheory_2.0
